Added link to implementation branch for TIP 480

--- a/tip/480.md
+++ b/tip/480.md
@@ -7,6 +7,7 @@
 	Tcl-Version:	8.7
 	Keywords:	assertion, pragma, type, alias, compilation
 	Post-History:
+	Tcl-Branch:	tip-480
 ------
 
 # Abstract
