Results of big round of voting

--- a/tip/406.md
+++ b/tip/406.md
@@ -1,12 +1,16 @@
 # TIP 406: "C" is for Cookie
-	State:		Draft
+	State:		Accepted
 	Type:		Project
 	Tcl-Version:	8.7
-	Vote:		In progress
+	Vote:		Done
 	Post-History:	
 	Author:		Donal K. Fellows <dkf@users.sf.net>
 	Created:	01-Aug-2012
 	Tcl-Branch:	dkf-http-cookies
+	Vote-Summary:	Accepted 5/0/1
+	Votes-For:	DKF, KBK, JN, FV, SL
+	Votes-Against:	none
+	Votes-Present:	BG
 -----
 
 # Abstract
