--- a/tip/445.md
+++ b/tip/445.md
@@ -1,12 +1,16 @@
 # TIP 445: Tcl_ObjType Utility Routines
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        18-Mar-2016
 	Post-History:   
 	Tcl-Version:	8.7
 	Tcl-Branch:     tip-445
+	Vote-Summary:   Accepted 4/0/3
+	Votes-For:      DKF, KBK, JN, DGP
+	Votes-Against:  none
+	Votes-Present:  BG, FV, SL
 -----
 
 # Abstract
