--- a/tip/471.md
+++ b/tip/471.md
@@ -4,9 +4,16 @@
 	Type:           Project
 	Created:        05-May-2017
 	Tcl-Version:    8.7
-	Vote:		In progress
+	Vote:		Done
 	Post-History:
 	Tcl-Branch:     info-linkedname
+	Vote-Summary:   Rejected 2/2/3
+	Votes-For:      DKF, JN
+	Votes-Against:  KBK, DGP
+	Votes-Present:  BG, FV, SL
+	Vote-Comments:  feature provides insufficient information to be useful,
+	                and cannot work in way suitable to solve rationale; please
+	                rethink it (talk to TCT to help resolve)
 -----
 
 # Abstract
