--- a/tip/501.md
+++ b/tip/501.md
@@ -1,16 +1,21 @@
 # TIP 501: string is dict
 	Author:         Sean Woods <yoda@etoyoc.com>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        12-Feb-2018
 	Post-History:
 	Keywords:       Tcl,string
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-501
+	Vote-Summary:   Accepted 5/0/1
+	Votes-For:      DKF, KBK, JN, FV, SL
+	Votes-Against:  none
+	Votes-Present:  BG
 -----
 # Abstract
-This tip proposes the addition of an *is dict* test to the string ensemble. The command
+
+This TIP proposes the addition of an **is dict** test to the **string** ensemble. The command
 will return true if the value is a valid dict, and false otherwise.
 
 # Rationale
@@ -20,7 +25,7 @@ is a list and it's length is divisible by 2. The problem is that this requires 2
 different calls from the interpreter, and generates a dict to list conversion for
 the most common case (namely that the value is, indeed, a dict.)
 
-This tip proposes a shortcut in C to check to see if the internal representation is
+This TIP proposes a shortcut in C to check to see if the internal representation is
 already a dict, and provide a shortcut for the most common case.
 
 # Implementation
