--- a/tip/510.md
+++ b/tip/510.md
@@ -2,18 +2,24 @@
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	State:          Draft
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        5-Jun-2018
 	Post-History:   
 	Keywords:       Tk
 	Tcl-Version:    8.7
 	Tk-Branch:      tip-510
+	Vote-Summary:   Rejected 1/3/1
+	Votes-For:      DKF
+	Votes-Against:  KBK, JN, FV
+	Votes-Present:  BG
+	Vote-Comments:  code not yet ready, needs porting to macOS; alternate
+	                might be to just co-distribute, just as TDBC is with Tcl
 -----
 
 # Abstract
 
 *Rbc* aka "Refactored BLT Components" provides some widgets which are missing in *Tk*.
-This tip intend to add *Rbc* in the same way as *Ttk* to *Tk*.
+This TIP intends to add *Rbc* in the same way as *Ttk* to *Tk*.
 
 # Rationale
 
