--- a/tip/523.md
+++ b/tip/523.md
@@ -1,13 +1,17 @@
 # TIP 523: New lpop command
 	Author:		Peter Spjuth <peter.spjuth@gmail.com>
-	State:		Draft
+	State:		Accepted
 	Type:		Project
-	Vote:		In progress
+	Vote:		Done
 	Created:	22-Oct-2018
 	Post-History:
 	Tcl-Version:	8.7
 	Tcl-Branch:	tip-523
 	Keywords:	queue, stack, pop
+	Vote-Summary:   Accepted 7/0/0
+	Votes-For:      DKF, KBK, JN, DGP, FV, SL
+	Votes-Against:  none
+	Votes-Present:  BG
 -----
 
 # Abstract
