--- a/tip/415.md
+++ b/tip/415.md
@@ -1,13 +1,17 @@
 # TIP 415: Enable Easy Creation of Circular Arc Segments
 	Author:         Simon Geard <simon@whiteowl.co.uk>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        16-Oct-2012
 	Post-History:   
 	Keywords:       Tk
 	Tcl-Version:    8.7
 	Tk-Branch:      tip-415
+	Vote-Summary:   Accepted 5/0/1
+	Votes-For:      DKF, KBK, JN, FV, SL
+	Votes-Against:  none
+	Votes-Present:  BG
 -----
 
 # Abstract
