--- a/tip/506.md
+++ b/tip/506.md
@@ -1,12 +1,16 @@
 # TIP 506: Purge RefCount Macros
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        30-Mar-2018
 	Post-History:   
 	Tcl-Version:	8.7
 	Tcl-Branch:     tip-506
+	Vote-Summary:   Accepted 5/0/1
+	Votes-For:      DKF, KBK, JN, DGP, SL
+	Votes-Against:  none
+	Votes-Present:  BG, FV
 -----
 
 # Abstract
