--- a/tip/518.md
+++ b/tip/518.md
@@ -1,13 +1,17 @@
 # TIP 518: Virtual Event when Last Child is not Managed any more
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        22-Sep-2018
 	Post-History:   
 	Keywords:       Tk
 	Tcl-Version:    8.7
 	Tk-Branch:      tip518-event-last-child-unmanaged
+	Vote-Summary:   Accepted 6/0/0
+	Votes-For:      DKF, BG, KBK, JN, FV, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 # Abstract
 
