--- a/tip/519.md
+++ b/tip/519.md
@@ -1,13 +1,17 @@
 # TIP 519: Inline export/unexport option to TclOO method definition
 	Author:       Pietro Cerutti <gahr@gahr.ch>
-	State:        Draft
+	State:        Accepted
 	Type:         Project
-	Vote:         In progress
+	Vote:         Done
 	Created:      18-Oct-2018
 	Post-History:
 	Tcl-Version:  8.7
 	Keywords:     TclOO
 	Tcl-Branch:   tip-519
+	Vote-Summary:   Accepted 4/0/2
+	Votes-For:      DKF, KBK, JN, SL
+	Votes-Against:  none
+	Votes-Present:  BG, FV
 ----
 
 # Abstract
