--- a/tip/524.md
+++ b/tip/524.md
@@ -1,13 +1,17 @@
 # TIP 524: Custom Definition Dialects for TclOO
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        23-Oct-2018
 	Post-History:
 	Keywords:       Tcl, object orientation, customization
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-524
+	Vote-Summary:   Accepted 2/0/4
+	Votes-For:      DKF, JN
+	Votes-Against:  none
+	Votes-Present:  BG, KBK, FV, SL
 -----
 
 # Abstract
