Many TIPs now Final

--- a/tip/445.md
+++ b/tip/445.md
@@ -1,6 +1,6 @@
 # TIP 445: Tcl_ObjType Utility Routines
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        18-Mar-2016
