--- a/tip/501.md
+++ b/tip/501.md
@@ -1,6 +1,6 @@
 # TIP 501: string is dict
 	Author:         Sean Woods <yoda@etoyoc.com>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        12-Feb-2018
