--- a/tip/519.md
+++ b/tip/519.md
@@ -1,6 +1,6 @@
 # TIP 519: Inline export/unexport option to TclOO method definition
 	Author:       Pietro Cerutti <gahr@gahr.ch>
-	State:        Accepted
+	State:        Final
 	Type:         Project
 	Vote:         Done
 	Created:      18-Oct-2018
