--- a/tip/523.md
+++ b/tip/523.md
@@ -1,6 +1,6 @@
 # TIP 523: New lpop command
 	Author:		Peter Spjuth <peter.spjuth@gmail.com>
-	State:		Accepted
+	State:		Final
 	Type:		Project
 	Vote:		Done
 	Created:	22-Oct-2018
