--- a/tip/524.md
+++ b/tip/524.md
@@ -1,6 +1,6 @@
 # TIP 524: Custom Definition Dialects for TclOO
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        23-Oct-2018
