--- a/tip/506.md
+++ b/tip/506.md
@@ -1,6 +1,6 @@
 # TIP 506: Purge RefCount Macros
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        30-Mar-2018
