415 and 518 are Final

--- a/tip/415.md
+++ b/tip/415.md
@@ -1,6 +1,6 @@
 # TIP 415: Enable Easy Creation of Circular Arc Segments
 	Author:         Simon Geard <simon@whiteowl.co.uk>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        16-Oct-2012
