--- a/tip/518.md
+++ b/tip/518.md
@@ -1,6 +1,6 @@
 # TIP 518: Virtual Event when Last Child is not Managed any more
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        22-Sep-2018
