Corrected vote record

--- a/tip/523.md
+++ b/tip/523.md
@@ -9,9 +9,9 @@
 	Tcl-Branch:	tip-523
 	Keywords:	queue, stack, pop
 	Vote-Summary:   Accepted 7/0/0
-	Votes-For:      DKF, KBK, JN, DGP, FV, SL
+	Votes-For:      DKF, BG, KBK, JN, DGP, FV, SL
 	Votes-Against:  none
-	Votes-Present:  BG
+	Votes-Present:  none
 -----
 
 # Abstract
