Add precisions in TIP #466 about spaces trimming, -spacemode options, and the fact that no -spacemode value shows text completely identical to the legacy code (slight backwards incompatibility).

--- a/tip/466.md
+++ b/tip/466.md
@@ -283,9 +283,11 @@ at <http://scidb.sourceforge.net/tk/revised-text-widget.html>
 
  * Insert cursor is now fully visible in all conditions
 
- * Trimming spaces: Issue \#1082213 is invalid, the fix put in trunk \(8.7\) has
-   been reverted \(but there is now the new option **-spacemode** that can be
-   set to **trim**\)
+ * Trimming spaces: Issue \#1082213 (and \#1754051) are invalid, the fix put
+   in core-8-6-branch and trunk \(8.7\) have been reverted. There is now
+   the new option **-spacemode** that can be set to **trim**\, however
+   none of the available values for **-spacemode** in the revised code
+   provide a display exactly identical to 8.6 in all cases
 
  * Issues with display of selections fixed
 
@@ -344,6 +346,10 @@ known:
  * In revised implementation "\+N chars" and "-N chars" refer to characters,
    and no longer to indices \(which was the case in legacy code for backwards
    compatibility reasons\).
+
+ * No value of the **-spacemode** option provides display of the text completely
+   identical to legacy code (8.6 and above) in all situations. This includes the
+   default "none".
 
 ## Deprecated Commands and Options
 
