--- a/tip/481.md
+++ b/tip/481.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           In progress
+	Vote:           Pending
 	Created:        27-Oct-2017
 	Post-History:
 	Keywords:       Tcl
