--- a/tip/512.md
+++ b/tip/512.md
@@ -1,8 +1,8 @@
 # TIP 512: No stub for Tcl_SetExitProc()
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        25-June-2018
 	Post-History:   
 	Keywords:       Tcl
